--- a/app/src/main/res/layout/products_list_item.xml
+++ b/app/src/main/res/layout/products_list_item.xml
@@ -74,4 +74,12 @@
 
     </LinearLayout>
 
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/track_sale_button_text"
+        android:id="@+id/track_sale_list_item_button"
+        android:layout_gravity="center_horizontal" />
+
 </LinearLayout>
